--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+libxml-api-perl (0.05-1) unstable; urgency=low
+
+  * New upstream.
+
+ --  <nomad@null.net>  Sat,  4 Jun 2005 21:04:17 +0200
+
+libxml-api-perl (0.04-1) unstable; urgency=low
+
+  * New upstream.
+
+ --  <nomad@null.net>  Mon,  2 May 2005 11:41:52 +0200
+
 libxml-api-perl (0.03-1) unstable; urgency=low
 
   * New upstream.
