--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libxml-api-perl (0.07-1) testing; urgency=low
+
+  * New Upstream
+
+ --  <nomad@null.net>  Wed,  3 Aug 2005 13:01:56 +0200
+
 libxml-api-perl (0.06-1) testing; urgency=low
 
   * New Upstream
