--- a/Changes
+++ b/Changes
@@ -1,5 +1,44 @@
 Changelog for Perl extension XML::API
 
+Tue Feb 27 15:27:11 CET 2007  Mark Lawrence <nomad@null.net>
+  * Documented '--' conversion in xml comments
+
+Tue Feb 27 15:02:23 CET 2007  Mark Lawrence <nomad@null.net>
+  * Added XML::XHTML::RSS
+  * Debian changelog => 0.11.
+
+Tue Feb 27 15:01:26 CET 2007  Mark Lawrence <nomad@null.net>
+  * Added Changes file.
+
+Tue Feb 27 14:59:53 CET 2007  Mark Lawrence <nomad@null.net>
+  * Added example CGI script bin/xml-api.cgi
+
+Tue Feb 27 14:56:10 CET 2007  Mark Lawrence <nomad@null.net>
+  * Added Module::Install infrastructure to darcs
+  Now 'darcs dist' should build a working copy.
+
+Tue Feb 27 14:42:25 CET 2007  Mark Lawrence <nomad@null.net>
+  * New Version 0.11
+  * Migration to Tree::Simple away from inbuilt tree code
+  * Makefile.PL and debian/control dependency on Tree::Simple 1.17
+  * Copyright to year 2007
+  * Removed Storable functions (_freeze etc) - doesn't belong here.
+  * Cleaned up and documented _encoding
+  * Cache _as_string output
+  * Remove all references to XSD validation
+  * Escape '<>&"' during element(), element_open(), _add()
+  * New _raw function for no escaping
+  * New _javascript shortcut
+  * New _parsed method
+  * Start of some testing
+  * Complete reorganisation of code and moved documentation inline
+
+Sat Apr 22 14:50:51 CEST 2006  Mark Lawrence <nomad@null.net>
+  * Added _encoding function
+
+Sat Apr 22 13:00:15 CEST 2006  Mark Lawrence <nomad@null.net>
+  * Use portable 'nfreeze' instead of 'freeze' when Storing
+
 Tue Aug 30 17:17:37 CEST 2005  Mark Lawrence <nomad@null.net>
   tagged 0.09
 
