--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,35 @@
+libxml-api-perl (0.11-2) stable; urgency=low
+
+  * Upstream - Documentation of -- in comments.
+
+ -- mlawren <mlawren@lifebook.rekudos.net>  Tue, 27 Feb 2007 15:29:49 +0100
+
+libxml-api-perl (0.11-1) stable; urgency=low
+
+  * New upstream.
+  * Added dependency on libtree-simple-perl 1.17
+
+ -- mlawren <mlawren@lifebook.rekudos.net>  Tue, 27 Feb 2007 14:58:18 +0100
+
+libxml-api-perl (0.10-1) stable; urgency=low
+
+  * New upstream.
+  * This is a temporary deb-only release for the myspam package.
+
+ -- mlawren <mlawren@lifebook.rekudos.net>  Sun, 21 Jan 2007 08:53:02 +0100
+
+libxml-api-perl (0.09-4) testing; urgency=low
+
+  * New upstream
+
+ -- mlawren <mlawren@lifebook.rekudos.net>  Sat, 22 Apr 2006 14:51:24 +0200
+
+libxml-api-perl (0.09-3) testing; urgency=low
+
+  * New upstream
+
+ -- mlawren <mlawren@lifebook.rekudos.net>  Sat, 22 Apr 2006 13:01:05 +0200
+
 libxml-api-perl (0.09-2) testing; urgency=low
 
   * Added changelog update from darcs.
