--- a/README
+++ b/README
@@ -17,10 +17,11 @@ INSTALLATION
 DEPENDENCIES
 
      XML::Parser::Expat      (from XML::Parser on CPAN)
+     Tree::Simple            (CPAN)
 
 COPYRIGHT AND LICENCE
 
-  Copyright (C) 2004,2005 Mark Lawrence <nomad@null.net>
+  Copyright (C) 2004-2007 Mark Lawrence <nomad@null.net>
 
   This program is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
