Import of MLAWREN/XML-API-0.13 from CPAN.
gitpan-cpan-distribution: XML-API
gitpan-cpan-version:      0.13
gitpan-cpan-path:         MLAWREN/XML-API-0.13.tar.gz
gitpan-cpan-author:       MLAWREN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Changelog for Perl extension XML::API
 
+Thu Mar  1 13:29:06 CET 2007  Mark Lawrence <nomad@null.net>
+  * doctype is now optional for generic documents
+
+Thu Mar  1 13:26:55 CET 2007  Mark Lawrence <nomad@null.net>
+  * VERSION to 0.13
+
 Wed Feb 28 14:30:36 CET 2007  Mark Lawrence <nomad@null.net>
   tagged 0.12
 
