--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libxml-api-perl (0.16-1) stable; urgency=low
+
+  * new upstream.
+
+ -- Mark Lawrence <nomad@null.net>  Wed, 10 Oct 2007 19:13:44 +0200
+
 libxml-api-perl (0.15-1) stable; urgency=low
 
   * VERSION to 0.15
