--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+libxml-api-perl (0.18-1) stable; urgency=low
+
+  * New upstream.
+
+ -- Mark Lawrence <nomad@null.net>  Wed,  2 Jan 2008 10:55:15 +0930
+
+libxml-api-perl (0.17-2) stable; urgency=low
+
+  * new upstream.
+
+ -- Mark Lawrence <nomad@null.net>  Tue, 16 Oct 2007 10:05:44 +0200
+
+libxml-api-perl (0.17-1) stable; urgency=low
+
+  * new upstream.
+
+ -- Mark Lawrence <nomad@null.net>  Wed, 10 Oct 2007 20:27:20 +0200
+
 libxml-api-perl (0.16-1) stable; urgency=low
 
   * new upstream.
