Import of MLAWREN/XML-API-0.25 from CPAN.
gitpan-cpan-distribution: XML-API
gitpan-cpan-version:      0.25
gitpan-cpan-path:         MLAWREN/XML-API-0.25.tar.gz
gitpan-cpan-author:       MLAWREN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,383 +1,9 @@
-commit 11194221edc0a7473d877f0cb705c88e34431b1b (master)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Thu Oct 9 17:10:55 2008 +0200
-
-    XML::API
-        New element_raw() shortcut.
-        Fixed up warnings issued by non-initialized variables in _ast()
-        Added warnings when 'undef' is passing in as input.
-    
-    ./debian - removed from git control. dh-make-perl is your friend.
-    
-    CPAN
-        Uploaded as v0.24.
-
-commit f2ed66159de31ffe4e43a6982a86ca6f3cc29779 (master~1)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Sun Sep 21 16:11:26 2008 +0200
-
-    debian
-        Remove old build-depends requirement on libmodule-build-perl.
-
-commit 8631b796fda11a2cf22af81f01aec0a78474abd2 (master~2)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Sun Jun 15 11:17:54 2008 +0200
-
-    Makefile.PL
-        build_requires File::Slurp for testing output of _as_string().
-    
-    CPAN
-        Uploaded as v0.23.
-
-commit 346ddcdc1cf2ea3d66afedb7dbdfdcca5221e71f (master~3)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Sun Jun 15 11:10:31 2008 +0200
-
-    XML::API
-        Added support to _as_string() and _fast_string() to write their result
-        directly to a file.
-    
-        Removed all left-over traces of the (never fully implemented) cached
-        strings support.
-
-commit 8486a13e3b0bc9c7ff1d5bed2f305e3546c67774 (master~4)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Tue Jun 3 12:22:05 2008 +0200
-
-    XML::API
-        Bugfix: Force XML::SAX::ParserFactory to return a parser based on
-        XML::LibXML::SAX.
-    
-    CPAN
-        Uploaded as v0.22.
-
-commit 0410e49ac74fecea09e073af541ab2b3c3e942f4 (master~5)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Tue May 27 12:11:21 2008 +0200
-
-    XML::API::Cache - Added a $VERSION variable.
-
-commit 6ba07996a4abe5fe6b16be7f47ad521398c711a5 (master~6)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Tue May 27 12:05:47 2008 +0200
-
-    XML::API - Convert last remaining ->$e_open calls to ->_open($e).
-
-commit a87fbfc4bbe4f280e78fb022f37ec547fcc48db6 (master~7)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Tue May 27 11:51:31 2008 +0200
-
-    ML::API
-        New _element() method for oddball XML element names. Yet another
-        suggetsion from Sean McAfee.
-    
-    CPAN
-        Uploaded as v0.21.
-
-commit e95b5f19274e54c2cba9b94bfe04cec7e9756716 (master~8)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Tue May 27 11:26:50 2008 +0200
-
-    XML::API
-        Refactored the AUTOLOAD subroutine into combinations of _open and
-        _close based on a suggestion by Sean McAfee <eefacm@gmail.com>.
-    
-    CPAN
-        Uploaded as v0.20.
-
-commit df9ed41c44ce1ca443a9f97287828e2333d3fdd6 (master~9)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Tue May 27 10:38:10 2008 +0200
-
-    XML::API::Cache
-        New module.
-    
-    Various
-        Removed old test t/XML-API-XHTML.t.
-        MANIFEST fixes.
-
-commit a5d83cd67b6c15836c1fa498d3c56de7fead843e (master~10)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Tue May 27 10:21:32 2008 +0200
-
-    XML::API::RSS
-        Brought into the 21st centry - first time this actually works!
-    
-    t/synopsis.t
-        Check that the SYNOPSIS section in the pod is real code.
-
-commit 5dc767a3bef57305200d3ab590896d054414a1ab (master~11)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Tue May 27 10:16:06 2008 +0200
-
-    XML::API
-        Bugfix: _ast calls with hyphens on the right side of '=>' were
-        being interpreted as attributes. Thanks to a report by Sean McAfee
-        <eefacm@gmail.com>.
-
-commit 9f948b640d8b0340e6acf46bc510c6031d376c35 (master~12)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Tue May 27 10:05:45 2008 +0200
-
-    ML::API
-        Escape XML entities before _parse'ing (otherwise the SAX parser barfs)
-        Added tests for _parse and _parse_chunk.
-    
-    Makefile.PL, debian/control
-        Require XML::LibXML::SAX.
-
-commit 023daa216ffddba432745382f7d1d011f009ec4e (master~13)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Tue May 27 09:24:24 2008 +0200
-
-    XML::API
-        Cleaned up the code relating to how XML::API objects are _add'd to
-        each other.
-
-commit a931fa29f69c5e92a23ff9196ee6aaa5d4014165 (master~14)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Mon May 26 18:43:21 2008 +0200
-
-    XML::API
-        New _parse_chunk method.
-    
-    t/
-        Add missing test for _css.
-
-commit ecf73ed01646337f3083ee9caace16ca309104fa (master~15)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Mon May 26 18:27:29 2008 +0200
-
-    XML::API - New '_css' method for adding Cascading Style Sheets data.
-
-commit 6a8a774cd1fb84f48f906a9ce3322a5ac94deb00 (master~16)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Fri Mar 21 09:01:14 2008 +0100
-
-    Makefile.PL
-        Require Scalar::Util
-    
-    XML::API
-        Fixed the check for _adding an object to itself (and now test that it
-        actually works). Scalar::Util::refaddr is handy here.
-    
-        New _lang and _dir methods for returning the language and text
-        direction for the current node.
-    
-    CPAN
-        Uploaded as v0.19.
-
-commit bf4f73a411f488152175c4ab5fb01107981baf15 (master~17)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Wed Jan 2 10:55:56 2008 +0930
-
-    XML::API
-        Added XML namespace support. Thanks to Dariusz Grabias for discovering
-        this missing functionality.
-    
-    CPAN
-        Uploaded as 0.18
-
-commit 35af781e020c290c005357eb00a97f56ff04ae43 (master~18)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Fri Nov 2 15:58:50 2007 +0100
-
-    Bugfix: Content that starts with '-[0-9]' (eg negative numbers) was
-    being mistaken as an attribute key/definition.
-
-commit 0ee3965c45850d257b1c3a865b1d6ccb1f71553c (master~19)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Tue Oct 16 09:58:22 2007 +0200
-
-    Makefile.PL
-        Stop CPAN from indexing private packages XML::API::SAXHandler and
-        XML::API::Element.
-    
-    XML::API
-        Optimisation: Add the /o compile flag to most regular expressions, and
-        convert a few "" into ''.
-    
-        Properly reimplement _fast_string which got replaced during last major
-        refactoring.
-
-commit 79906535adeeb6690800051e7c161f47a125ac80 (master~20)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Wed Oct 10 20:23:11 2007 +0200
-
-    Removed META.yml from git control. Maybe this was somehow related to a
-    problem of META.yml being stuck with version 0.14, no matter how many times
-    I ran Makefile.PL...
-    
-    CPAN
-        Uploaded as 0.17, hopefully properly indexed this time.
-
-commit 136ffe8c4e1f08c6dd561fe407146a52b5f2bdba (master~21)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Wed Oct 10 19:13:21 2007 +0200
-
-    XML::API
-        Bugfix: Removed circular-reference memory leak in XML::API::Element
-        which was introduced by the rework in
-        074566ad5c66affe350a95bf2b856b8651835057 (master~28)
-    
-    Makefile.PL, debian/control
-        New dependency on Test::Memory::Cycle and libtest-memory-cycle-perl.
-    
-    CPAN
-        Uploaded as v0.16.
-
-commit 1b90c233ee590ea735883ecc241f58424582c285 (master~22)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Mon Oct 8 21:45:09 2007 +0200
-
-    General
-        Added Test::Exception to the requirements for this module. It appears
-        that Perl 5.9.X doesn't have this available by default. Thanks to
-        David Cantrell of cpan-testers for reporting.
-    
-    XML::API
-        _parse() adds dummy tags around any text to be fed to the SAX routines
-        since what XML::API will accept does not necessarily have to be an XML
-        document with a single root node.
-
-commit 6fa7b33cc4a8926b5cbdae5e1bb99a6b9c47584c (master~23)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Mon Oct 8 10:34:21 2007 +0200
-
-    SQL::DB
-        Bugfix: Only call SAX parser if input is not an empty string.
-
-commit 22a2786d7be24a376b2a5f431181ee9baabd6499 (master~24)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Sun Oct 7 22:52:43 2007 +0200
-
-    inc/*
-        Removed the Module::Install infrastructure from git control.
-
-commit 4d0c29cee2825485771d2ac5a387caf2777d9d83 (master~25)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Sun Oct 7 22:51:56 2007 +0200
-
-    XML::API
-        Added an _ast() method to convert data structures to xml.
-
-commit 360e1d92ee8688d8e12407d5a3a5837f803b5000 (master~26)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Sun Oct 7 02:04:21 2007 +0200
-
-    XML::API, Makefile.PL
-        Converted from XML::Parser to use XML::SAX instead.
-    
-    debian/control
-        Changed dependencies from libxml-parser-perl to libxml-sax-perl.
-    
-    CPAN
-        Uploaded as v0.15
-
-commit 44e0fb962ed3aeb0c8352534593f6fe6300e1d64 (master~27)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Sun Oct 7 01:19:53 2007 +0200
-
-    t/*, Makefile.PL, debian/control
-        Build depend on Test::Pod[::Coverage] so we actually run the pod tests.
-    
-    XML::API
-        Fixed a bug relating to merging the elements of two different XML::API
-        objects.
-
-commit 074566ad5c66affe350a95bf2b856b8651835057 (master~28)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Sat Oct 6 21:31:15 2007 +0200
-
-    General
-        Moved syntax tree implementation away from Tree::Simple and into
-        XML::API::Element. Resulted in large amount of code reduction and
-        complexity:
-    
-            lib/XML/API.pm | 154 insertions(+), 351 deletions(-)
-    
-        and also improved the speed considerably for adding elements:
-    
-            Benchmark: timing 10000 iterations of new, old...
-                new:  2 wallclock secs ( 2.04 usr +  0.24 sys =  2.28 CPU)
-                      @ 4385.96/s (n=10000)
-                old: 10 wallclock secs ( 8.82 usr +  1.06 sys =  9.88 CPU)
-                      @ 1012.15/s (n=10000)
-    
-        The speed difference on any non-trivially sized document is
-        almost a factor of 2! Rendering has a similar improvement.
-    
-    Build.PL
-        Removed.
-    
-    XML::API::Element::Cdata, XML::API::Element::Comment
-        Folded into XML::API::Element
-    
-    Makefile.PL, debian/control
-        Removed dependencies on Tree::Simple and libtree-simple-perl.
-
-commit 6be2acc3e0dd9aef89eb8b779c1810638aff05b2 (master~29)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Sat Oct 6 13:41:34 2007 +0200
-
-    XML::API
-        Moved all POD documentation to the end of the file.
-
-commit 39b77ec0f2c00d6b911a71d183588b0523a8e2c4 (master~30)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Wed May 30 15:46:35 2007 +0200
-
-    Concatenate multiple _add($scalar) calls into one node/element.
-
-commit c6d504b0874d059b07611bb3a579c73c66b15ce4 (master~31)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Tue May 29 15:07:15 2007 +0200
-
-    Remove {doctype} from the hash properly after object has been blessed.
-    Release the parser before removing it from %parsers;
-
-commit cdc9a7857b93b00f515b010c9aeadda4e649b92a (master~32)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Sat May 12 12:56:00 2007 +0200
-
-    * VERSION to 0.15
-
-commit dbfe34236cd611ba4b675ab9bd7c80a67b6a4517 (master~33)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Sat May 12 12:46:37 2007 +0200
-
-    releasing version 0.14
-
-commit cff42740481689d9058e543dbe015ebe48d51b99 (master~34)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Sat May 12 11:32:44 2007 +0200
-
-    * Documentation cleanup for overloading XML::API
-    * Cleaned up Makefile.PL
-
-commit c664bedbe95109e5e712a628a86a495465d7a260 (master~35)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Sat May 12 11:20:06 2007 +0200
-
-    * Removed Changes file from git control.
-
-commit abe5394e62eb7820b791835e138620029c298aea (master~36)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Sat May 12 10:01:29 2007 +0200
-
-    * Changed the behaviour of _set_lang to set xml:lang on the next
-    element to be created. Automatically sets the xml:lang attribute on the
-    root element on the first call.
-    * Test script for the language functions: t/lang.t
-
-commit 736a3978423b4d7f82ed65934af41ce697f574e8 (master~37)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Fri May 11 01:25:32 2007 +0200
-
-    * Minor documentation changes.
-
-commit 1f9c6e1530ecd0b44cec98cad5dfeffbb8dd1446 (master~38)
-Author: Mark Lawrence <nomad@null.net>
-Date:   Thu May 10 14:59:11 2007 +0200
-
-    Initial commit under git. Darcs changes in Changelog.old.
+- testing: Handle '\r\n' vs '\n' issues on Windows/Dos based filesystems.
+- Makefile.PL: Remove all dependencies on Test::Pod* modules
+- Remove auto_install from Makefile.PL
+- Convert "UNIVERSAL::isa(" to "eval { $obj->isa("
+- Fix object stringification tests on recent Test::More.
+- Add respository information to the META data.
+- Make _add() actually croak/carp on bad input.
+- Update MANIFEST with Module::Install changes.
+- CPAN - Released as version 0.25.
